tests/negative/dave_incorrectopmlversion.opml
<?xml version="1.0" encoding="ISO-8859-1"?><opml version="0.5">	<head/>	<body/>	</opml>